chore: update dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,12 @@
   ],
   "cSpell.words": [
     "FACILITYUST",
+    "aprx",
     "arcpy",
     "facilityid",
     "objectid",
     "strftime",
+    "tqdm",
     "udwspz",
     "wrpod"
   ],
