--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": false,
   "python.linting.pycodestyleEnabled": false,
-  "python.formatting.provider": "yapf",
+  "python.formatting.provider": "black",
   "python.formatting.yapfArgs": [
     "--style",
     "${workspaceRoot}/setup.cfg"
